--- a/contactus.css
+++ b/contactus.css
@@ -1,5 +1,6 @@
+  
 .main-container-1{
-	width: 700px;
+	width: 50%;
 	z-index: 1;
 	height: 500px;
 	margin: auto;
@@ -35,11 +36,11 @@
 }
 
 .contact-input-1{
-	width: 678px;
+	width: 98%;
 	height: 360px !important;
 	font-size: 30px;
-	margin-right: 5px;
 	border: 1px solid #ced4da;
+	margin-left: 1.5%;
     border-radius: .25rem;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 
@@ -52,7 +53,7 @@
 .contact-btn-1{
 	background: #ec6952;
     border: 2px solid #ec6952;
-	width: 690px;
+	width: 100%;
 	height: 50px;
 }
 
@@ -63,9 +64,10 @@
 }
 
 .contact-social{
-	width: 700px;
+	width: 50%;
 	height: 430px;
 	margin: auto;
+	margin-bottom: 40px;
 }
 
 .contact-social .envolope{
@@ -97,8 +99,6 @@
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 4px;
     border-top-left-radius: 4px;
-  
-   
     background-clip: padding-box;
 }
 
@@ -116,30 +116,112 @@
 }
 
 .intro{
-	max-width: 700px;
+	width: 70%;
 	text-align: center;
 	color: #999;
 }
 
 .intro-1{
-color: #999;
-position: relative;
-text-align: center;
+    color: #999;
+    position: relative;
+    text-align: center;
 }
 
 .heading-pic{
-	position: absolute;
+    position: absolute;
     width: 100%;
     top: 0;
     left: 0;
-    height: 500px;
-    background: #253340 url(../images/background.jpg) no-repeat 50% top;
-    background-size: cover;
     position:  absolute;
     height: 100%;
 }
 
-.pic{
-	background-image: url(../images/2.jpg);
-    z-index: -1;
+.footer-2{
+	background-color :  #303a40;
+	color:  white;
+	height:  50px;
+	text-align: center;
+	position: absolute;
+	padding-top: 15px;
+	width: 100%;
+}
+
+
+@media screen and (max-width:480px) and (min-width: 320px){
+.main-container-1{
+	width: 95%;
+	margin: 0px auto;
+}
+.main-container-2{
+	width: 95%;
+	margin: 40px auto;
+	margin-bottom: 60px;
+}
+.size-1{
+	  width: 50%;
+	  margin-top: 5px;
+	  margin-bottom: 80px;
+}
+.text-center{
+	font-size: 2em;
+
+}
+.footer-2{
+	height:  30px;
+	padding-top: 7px;
+	font-size: 0.7em;	
+	margin-top: 60px;
+}
+.text-input-1{
+	width: 100%;
+}
+
+.logo-color{
+    width: 60px;
+    height: 100%;
+    }
+.contact-social .envolope{
+	margin-bottom: 15px;
+    padding: 5px;
+    padding-left: 90px;
+    margin-left:0px;
+    font-size: .8em;
+    width: 100%;
+    height: 50px;
+}
+ .contact-input-1{
+ 	width: 97%;
+ }
+ .contact-social{
+	margin-top: 10px;
+	height: 340px;
+	width: 80%;
+}
+.intro-1{
+	width: 100%;
+}
+}
+
+@media screen and (max-width: 768px) and (min-width: 481px){
+.main-container-1{
+	width: 80%;
+}
+.size-1{
+	  width: 50%;
+}
+.contact-social{
+	margin-left: 24%;
+}
+.contact-social .envolope{
+    font-size: .8em; 
+}
+
+}
+
+@media screen and (max-width: 1024px) and (min-width: 769px){
+
+}
+
+@media screen and (max-width: 1440px) and (min-width: 1025px){
+
 }
